src/static/css/base/_base_reset.scss
@use "./base_variables";

/* ===========
CSS Reset
============== */

html {
    box-sizing: border-box;
    font-family: "Rubik";
    font-weight: 500;
}
  
*, *::before, *::after {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

html, body {
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
}

body {
    background: base_variables.$document-bg-color;
}

/* ===========
Sticky header & Footer
============== */

.fluid-layout {
    display: grid;
    grid: auto 1fr auto / 1fr;
    
    width: 100vw;
    height: 100vh;
}

